// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Footer.Copyright matches snapshot: Footer.Copyright 1`] = `
<div>
  <p
    class="nhsuk-footer__copyright"
  />
</div>
`;

exports[`Footer Footer.List matches snapshot: Footer.List 1`] = `
<div>
  <ul
    class="nhsuk-footer__list"
  />
</div>
`;

exports[`Footer Footer.ListItem matches snapshot: Footer.ListItem 1`] = `
<div>
  <li
    class="nhsuk-footer__list-item"
  >
    <a
      class="nhsuk-footer__list-item-link"
    />
  </li>
</div>
`;

exports[`Footer matches snapshot: Footer 1`] = `
<div>
  <footer
    role="contentinfo"
  >
    <div
      class="nhsuk-footer-container"
    >
      <div
        class="nhsuk-width-container"
      >
        <h2
          class="nhsuk-u-visually-hidden"
        >
          Support links
        </h2>
        <div
          class="nhsuk-footer"
        />
      </div>
    </div>
  </footer>
</div>
`;
